gitops/manifests/corecontrol/install.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: corecontrol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: corecontrol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: haedlessdev/corecontrol:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: corecontrol
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
---
kind: Deployment
metadata:
  name: agent
  namespace: corecontrol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
        - name: agent
          image: haedlessdev/corecontrol-agent:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              chmod +x ./app
              ./app
          securityContext:
            runAsUser: 0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: corecontrol-internal
  namespace: corecontrol
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`corecontrol.local.timmybtech.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
  tls:
    secretName: local-timmybtech-com-tls
